--- a/HR_AI_assistant_analyzes_your_leave_details_and_company_policy_and_gives_suggestions_approval_and_formalities.ipynb
+++ b/HR_AI_assistant_analyzes_your_leave_details_and_company_policy_and_gives_suggestions_approval_and_formalities.ipynb
@@ -164,8 +164,8 @@
     {
       "cell_type": "code",
       "source": [
-        "path1= [\"/content/drive/MyDrive/github_projects/fake_face_book hr policy.pdf\"]\n",
-        "path2= \"/content/drive/MyDrive/github_projects/pizza-412109-78beb3072fb9.json\""
+        "path1= [\"fake_face_book hr policy.pdf\"]\n",
+        "path2= \"pizza-412109-78beb3072fb9.json\""
       ],
       "metadata": {
         "id": "gtO4Gfs2yrlY"
