--- a/HR_AI_assistant_analyzes_your_leave_details_and_company_policy_and_gives_suggestions_approval_and_formalities.ipynb
+++ b/HR_AI_assistant_analyzes_your_leave_details_and_company_policy_and_gives_suggestions_approval_and_formalities.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Gu_EX-sfvBGbeI8RPm-SKVsNUtFr8Ub_",
-      "authorship_tag": "ABX9TyPCvqiDB7V0EoYWF07XL6XL",
+      "authorship_tag": "ABX9TyN7vqUwTQ4+LWK08VbfTLPf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,12 +80,12 @@
       "cell_type": "code",
       "source": [
         "#pls enter your API key HERE\n",
-        "APIKEY=\" \""
+        "APIKEY="
       ],
       "metadata": {
         "id": "ho52soB4T-WF"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "    if content:\n",
         "        paragraph += content\n",
         "\n",
-        "text_splitter = CharacterTextSplitter(separator = \"\\n\",chunk_size = 1200,chunk_overlap  = 200,length_function = len)\n",
+        "text_splitter = CharacterTextSplitter(separator = \"\\n\",chunk_size = 1300,chunk_overlap  = 200,length_function = len)\n",
         "texts = text_splitter.split_text(paragraph)\n",
         "\n",
         "\n",
@@ -222,17 +222,16 @@
         "\n",
         "search()\n",
         "\n",
-        "# pls use X/CH/866 for employee id or check the bigquery\n",
-        "#am i eligible for maternity leave"
+        "# pls use X/CH/866 for employee id or check the bigquery\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8BaqqJ7owmWQ",
-        "outputId": "6fc5ad88-b1ca-4c8e-bf33-9daacbf097b5"
+        "outputId": "850658b3-2141-408f-b416-626a432948e5"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "name": "stdout",
@@ -246,66 +245,52 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 3683, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1601, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2255, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1397, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2498, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2505, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2037, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2962, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2271, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1682, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1741, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2295, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1628, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1783, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1908, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 3054, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 3161, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 1392, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 3796, which is longer than the specified 1200\n",
-            "WARNING:langchain_text_splitters.base:Created a chunk of size 2249, which is longer than the specified 1200\n",
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.llms.openai.OpenAI` was deprecated in langchain-community 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
-            "  warn_deprecated(\n"
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 3683, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1601, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2255, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1397, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2498, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2505, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2037, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2962, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2271, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1682, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1741, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2295, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1628, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1783, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1908, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 3054, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 3161, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 1392, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 3796, which is longer than the specified 1300\n",
+            "WARNING:langchain_text_splitters.base:Created a chunk of size 2249, which is longer than the specified 1300\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[['X/CH/866', 'gangadhar', 'gangadhar@omail.com', 3, 12, 0, 2, 0, 0, 0]]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `run` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
-            "  warn_deprecated(\n",
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.chat_models.openai.ChatOpenAI` was deprecated in langchain-community 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
-            "  warn_deprecated(\n",
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `__call__` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
-            "  warn_deprecated(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "[['X/CH/866', 'gangadhar', 'gangadhar@omail.com', 3, 12, 0, 2, 0, 0, 0]]\n",
             "\n",
             "\n",
             "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
             "Prompt after formatting:\n",
-            "\u001b[32;1m\u001b[1;3mSystem: You are a nice hr  you will give suggestions and steps by referring the company policy, the compny policy is  Based on the provided context, it seems that maternity leave is available for all female employees who have completed 80 days of working. However, it is best to confirm with the HR manager to ensure your eligibility for maternity leave. and this information about my self i am a employe my name is gangadhar@omail.com my employee id gangadhar my mail id is X/CH/866 i have 3 pl_cl remaining , 12 sick leave remaining , 0 maternity leave remaining , 2 cam_off remaining , 0 leaves carry_forward,0 lop remaining  ,0 wfh  remaining  \n",
+            "\u001b[32;1m\u001b[1;3mSystem: You are a nice hr  you will give suggestions and steps by referring the company policy, the compny policy is  Based on the context provided, maternity leave is available for all female employees who have completed 80 days of working and have less than two surviving children. Additionally, the employee must provide an approved Medical Practitioner's report confirming their pregnancy and the estimated delivery date, along with their supervisor's approval. It is also important to note that maternity leave can only be taken after 6 months from the completion of the previous maternity leave. If you have any further questions, it is best to consult with your HR Manager for specific eligibility requirements. and this information about my self i am a employe my name is gangadhar@omail.com my employee id gangadhar my mail id is X/CH/866 i have 3 pl_cl remaining , 12 sick leave remaining , 0 maternity leave remaining , 2 cam_off remaining , 0 leaves carry_forward,0 lop remaining  ,0 wfh  remaining  \n",
             "Human: am i eligible for maternity leave\u001b[0m\n",
             "\n",
             "\u001b[1m> Finished chain.\u001b[0m\n",
-            "Hello Gangadhar,\n",
+            "Based on the company policy provided, in order to be eligible for maternity leave, you need to meet the following criteria:\n",
             "\n",
-            "Thank you for reaching out. Based on the company policy, maternity leave is available for all female employees who have completed 80 days of working. Since you are an employee named Gangadhar with the email ID gangadhar@omail.com and employee ID gangadhar, it appears that you may not be eligible for maternity leave as you have 0 maternity leave remaining.\n",
+            "1. You must be a female employee.\n",
+            "2. You must have completed 80 days of working.\n",
+            "3. You must have less than two surviving children.\n",
+            "4. You must provide an approved Medical Practitioner's report confirming your pregnancy and the estimated delivery date.\n",
+            "5. You must have your supervisor's approval.\n",
             "\n",
-            "I would recommend confirming your eligibility for maternity leave with the HR manager to get accurate information regarding your specific situation. If you have any further questions or need assistance with anything else, please feel free to ask.\n"
+            "Since you have 0 maternity leave remaining, it seems like you have already taken your maternity leave previously. According to the policy, maternity leave can only be taken after 6 months from the completion of the previous maternity leave.\n",
+            "\n",
+            "If you have any further questions or need more clarification on your eligibility, I recommend consulting with your HR Manager for specific details based on your situation.\n"
           ]
         }
       ]
